<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_home"
        android:title="@string/menu_home" />
    <item
        android:id="@+id/nav_schedule"
        android:icon="@drawable/ic_schedule"
        android:title="@string/menu_schedule" />
    <item
        android:id="@+id/nav_calendar"
        android:icon="@drawable/ic_calendar"
        android:title="@string/menu_calendar" />
    <item
        android:id="@+id/nav_prayers"
        android:icon="@drawable/ic_book"
        android:title="@string/menu_prayers" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_settings"
        android:title="@string/menu_settings" />
</menu>
    <!-- Note: Anda perlu menambahkan vector asset untuk ic_home, dll di folder drawable -->